DigicielFull/force-app/main/default/objects/amc__Project_Stakeholder__c/amc__Project_Stakeholder__c.object-meta.xml
<CustomObject>
    <label>Project Stakeholder</label>
    <nameField>
        <displayFormat>PSID-{000000}</displayFormat>
        <label>Stakeholder ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Stakeholders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>