DigicielFull/force-app/main/default/objects/amc__Project_Stakeholder__c/fields/amc__Contact__c.field-meta.xml
<CustomField>
    <fullName>amc__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Identifies the Contact this Project Stakeholder record relates to</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Project Stakeholders</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>