DigicielFull/force-app/main/default/objects/amc__Project_Stakeholder__c/fields/amc__Email__c.field-meta.xml
<CustomField>
    <fullName>amc__Email__c</fullName>
    <formula>IF(ISBLANK( amc__User__r.Email ), IF(ISBLANK( amc__Contact__r.Email ), IF(ISBLANK( amc__Role__r.amc__Email_Lookup__c ),&quot;&quot;,amc__Role__r.amc__Email_Lookup__c), amc__Contact__r.Email),amc__User__r.Email)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula: References the Email of the User or Contact</inlineHelpText>
    <label>Email</label>
    <type>Text</type>
</CustomField>