DigicielFull/force-app/main/default/objects/amc__Project_Stakeholder__c/fields/amc__First_Name__c.field-meta.xml
<CustomField>
    <fullName>amc__First_Name__c</fullName>
    <formula>IF( ISBLANK(amc__User__r.FirstName) , IF(ISBLANK(amc__Contact__r.FirstName), IF(ISBLANK(amc__Role__r.amc__First_Name__c),&quot;&quot;,amc__Role__r.amc__First_Name__c),amc__Contact__r.FirstName), amc__User__r.FirstName )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula: References the First Name of the User or Contact</inlineHelpText>
    <label>First Name</label>
    <type>Text</type>
</CustomField>