DigicielFull/force-app/main/default/objects/amc__Project_Stakeholder__c/fields/amc__Last_Name__c.field-meta.xml
<CustomField>
    <fullName>amc__Last_Name__c</fullName>
    <formula>IF( ISBLANK(amc__User__r.LastName) , IF(ISBLANK(amc__Contact__r.LastName), IF(ISBLANK(amc__Role__r.amc__Last_Name__c),&quot;&quot;,amc__Role__r.amc__Last_Name__c),amc__Contact__r.LastName), amc__User__r.LastName )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula: References the Last Name of the User or Contact</inlineHelpText>
    <label>Last Name</label>
    <type>Text</type>
</CustomField>