DigicielFull/force-app/main/default/objects/amc__Project_Stakeholder__c/fields/amc__Project__c.field-meta.xml
<CustomField>
    <fullName>amc__Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Identifies the Project this Project Stakeholder record relates to</inlineHelpText>
    <label>Project</label>
    <referenceTo>amc__Project__c</referenceTo>
    <relationshipLabel>Project Stakeholders</relationshipLabel>
    <relationshipName>Project_Stakeholders</relationshipName>
    <type>Lookup</type>
</CustomField>