DigicielFull/force-app/main/default/objects/amc__Project_Stakeholder__c/fields/amc__User__c.field-meta.xml
<CustomField>
    <fullName>amc__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Identifies the User this Project Stakeholder record relates to</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Users</relationshipName>
    <type>Lookup</type>
</CustomField>